Remove linux-dev from default install

--- a/workdir/bin/glacies-install.rc
+++ b/workdir/bin/glacies-install.rc
@@ -2,5 +2,5 @@
 mkdir -p etc/ssl/certs
 update-ca-certificates --fresh
 venus -u
-venus -a linux linux-dev
+venus -a linux
 mkinitramfs `{ls /lib/modules}
