--- a/mk/common.rc
+++ b/mk/common.rc
@@ -23,22 +23,21 @@ fn msg {
 fn search {
 	found=false
 	for (p in $path) {
-		if (test -f $p/$1) found=true
-		true
+		{ if (test -f $p/$1) found=true } ||;
 	}
-	$found ||;
+	$found
 }
 
 # $1 : tool
 fn searchfail {
-	search $1 || die $1: not found
+	@{ search $1 } || die $1: not found
 }
 
 # $* : tool, args
 fn trydep {
 	@{ for (tool in $*) {
 		args=`{echo $tool}
-		search $args && {
+		@{ search $args } && {
 			echo $args
 			exit 0
 		}
