system-core: Use plzip in place of lzip

--- a/mk/env.conf
+++ b/mk/env.conf
@@ -2,8 +2,9 @@ nprocs=2
 # TOOLS
 FETCH=curl -LO
 SU=doas
+LZ=plzip -9
 UNBZ2=bzcat
-UNLZ=lzip -dc
+UNLZ=plzip -dc
 UNTAR=tar -xf -
 # OTHERS
 DEFAULT_PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
